# rl-memory-curriculum

./: .gitignore  03_31_phase_2_modifications.md  README.md  pyproject.toml
.github/instructions/: evaluation.instructions.md  project.instructions.md  testing.instructions.md  training.instructions.md
configs/: eval.yaml
data/: README.md  prepare_locomo.py  prepare_longmemeval.py  prepare_mixed.py
eval/: run_eval.py
scripts/: run_all.bat  run_all.sh  setup.sh
src/: pipeline.py  retriever.py  train_grpo.py
src/agents/: __init__.py  answer_agent.py  memory_manager.py
src/common/: __init__.py  config.py  prompts.py  scoring.py
src/eval/: __init__.py  analyze.py  inference.py  metrics.py  runner.py
src/memory/: __init__.py  bank.py  entry.py  heuristic.py
src/train/: __init__.py  callbacks.py  datasets.py  grpo.py  rewards.py
tests/: test_dry_run.py  test_eval_dry_run.py  test_utilities.py
