[project]
name = "rl-memory-curriculum"
version = "0.1.0"
description = "RL memory curriculum experiments for long-context LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.0",
    "datasets>=3.2.0",
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "peft>=0.14.0",
    "pyyaml",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.1.0",
    "transformers>=5.0.0",
    "trl>=0.15.0",
    "unsloth",
    "unsloth_zoo",
    "vllm>=0.17.0",
]

[tool.uv]
# Keep a local virtual environment in the repository root.
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_machine == 'x86_64' and (platform_system == 'Linux' or platform_system == 'Windows')" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
